fixed overflow problem

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -711,12 +711,12 @@ video {
   margin-top: 13rem;
 }
 
-.mr-16 {
-  margin-right: 4rem;
-}
-
 .ml-11 {
   margin-left: 2.75rem;
+}
+
+.mr-16 {
+  margin-right: 4rem;
 }
 
 .mt-\[4\.37rem\] {
@@ -803,6 +803,10 @@ video {
   display: none;
 }
 
+.h-\[1024px\] {
+  height: 1024px;
+}
+
 .h-12 {
   height: 3rem;
 }
@@ -813,26 +817,6 @@ video {
 
 .h-16 {
   height: 4rem;
-}
-
-.h-Card {
-  height: 17.501rem;
-}
-
-.h-14 {
-  height: 3.5rem;
-}
-
-.h-\[60px\] {
-  height: 60px;
-}
-
-.h-\[80px\] {
-  height: 80px;
-}
-
-.h-\[1024px\] {
-  height: 1024px;
 }
 
 .h-\[247px\] {
@@ -847,6 +831,14 @@ video {
   height: 676px;
 }
 
+.h-Card {
+  height: 17.501rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
 .h-\[394px\] {
   height: 394px;
 }
@@ -859,8 +851,16 @@ video {
   height: 320px;
 }
 
+.h-\[60px\] {
+  height: 60px;
+}
+
 .h-\[383px\] {
   height: 383px;
+}
+
+.h-\[80px\] {
+  height: 80px;
 }
 
 .w-\[95\%\] {
@@ -925,22 +925,6 @@ video {
 
 .w-14 {
   width: 3.5rem;
-}
-
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.min-w-fit {
-  min-width: -webkit-fit-content;
-  min-width: -moz-fit-content;
-  min-width: fit-content;
-}
-
-.max-w-full {
-  max-width: 100%;
 }
 
 .flex-auto {
@@ -1166,10 +1150,6 @@ video {
        column-gap: 0.5rem;
 }
 
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1361,10 +1341,6 @@ video {
   padding-top: 0.5rem;
 }
 
-.pb-16 {
-  padding-bottom: 4rem;
-}
-
 .pt-3 {
   padding-top: 0.75rem;
 }
@@ -1403,10 +1379,6 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
 }
 
 .text-left {
